# jetsonMCP

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: EXAMPLES.md  QUICKSTART.md
jetsonmcp/: __init__.py  __main__.py  cli.py  config.py  server.py
jetsonmcp/tools/: __init__.py  ai_workloads.py  base.py  containers.py  hardware.py  jetpack.py  monitoring.py  performance.py  security.py  storage.py  system.py
jetsonmcp/utils/: __init__.py  logger.py
scripts/: install-claude-desktop.sh  setup-jetson.sh
tests/: __init__.py  conftest.py  test_config.py  test_hardware_tool.py
